kubernetes/deploy-config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configserver
  namespace: spring-cloud
  labels:
    app: configserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configserver
  template:
    metadata:
      labels:
        app: configserver
    spec:
      containers:
        - name: configserver
          image: registry.labs:5000/config-server:1.0.0
          ports:
            - containerPort: 8800
