kubernetes/deploy-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: spring-cloud
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: registry.labs:5000/gateway:2.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
