kubernetes/deploy-lang-population.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lang-population
  namespace: spring-cloud
  labels:
    app: lang-population
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lang-population
  template:
    metadata:
      labels:
        app: lang-population
    spec:
      containers:
        - name: lang-population
          image: registry.labs:5000/country-lang-population:1.0.1
          ports:
            - containerPort: 8083
