kubernetes/deploy-consul.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: spring-cloud
  labels:
    app: consul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul
          image: consul:latest
          args:
            - "agent"
            - "-server"
            - "-ui"
            - "-node=server-1"
            - "-bootstrap-expect=1"
            - "-client=0.0.0.0"

          ports:
            - containerPort: 8500
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: consul
  name: consul
  namespace: spring-cloud
spec:
  ports:
  - port: 8500
    protocol: TCP
    targetPort: 8500
  selector:
    app: consul
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: consul
  name: consul-nodeport
  namespace: spring-cloud
spec:
  type: NodePort
  ports:
    - port: 8500
      protocol: TCP
      targetPort: 8500
      nodePort: 30500
  selector:
    app: consul
