kubernetes/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-service
  name: mongo-service
  namespace: spring-cloud
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo-service
  namespace: spring-cloud
subsets:
  - addresses:
      - ip: 192.168.50.1
    ports:
      - port: 27017
