kubernetes/service-gateway.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway-service
  name: gateway-service
  namespace: spring-cloud
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: gateway
